# aioratio

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml  pyrightconfig.json
.github/workflows/: ci.yml  publish.yml
scripts/: ble_smoke.py  smoke.py  smoke_tier1.py
src/aioratio/: __init__.py  _transport.py  auth.py  client.py  const.py  exceptions.py  srp.py  token_store.py
src/aioratio/ble/: __init__.py  _bleak_check.py  client.py  codec.py  const.py  discovery.py  protocol.py  transactions.py  transport.py
src/aioratio/ble/models/: __init__.py  common.py  control.py  network.py  ocpp.py  product.py  sensors.py  settings.py  status.py  wifi.py
src/aioratio/models/: __init__.py  charger.py  command.py  diagnostics.py  history.py  settings.py  vehicle.py
tests/: test_auth.py  test_ble_exceptions.py  test_ble_suite_runs.py  test_client.py  test_lazy_ble_import.py  test_meta.py  test_models.py  test_srp.py  test_token_store.py
tests/ble/: _serializer_refs.py  conftest.py  fake_transport.py  test_client.py  test_codec.py  test_discovery.py  test_models_common.py  test_models_network.py  test_models_ocpp.py  test_models_product.py  test_models_sensors.py  test_models_settings.py  test_models_status.py  test_models_wifi.py  test_protocol_version_gate.py  test_suite_runs.py  test_transactions.py  test_transport_pair_retry.py
