[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aioratio"
version = "0.1.0"
description = "Async Python client for the Ratio EV Charging cloud API"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Tim", email = "tim@iosharp.com" }]
dependencies = ["aiohttp>=3.9"]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-aiohttp>=1.0",
    "mypy>=1.8",
]

[tool.hatch.build.targets.wheel]
packages = ["src/aioratio"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
